# todolist

./: Cargo.toml  Trunk.toml  check_errors.txt  error.txt  package-lock.json  package.json  styles.css  tailwind.config.js
.github/workflows/: release.yml
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs
