[package]
name = "app-ui"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos-use = { version = "0.14", features = ["use_draggable"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
pulldown-cmark = "0.13.0"
web-sys = { version = "0.3", features = ["DragEvent", "DataTransfer", "HtmlElement", "DomRect", "Element", "Event", "MouseEvent", "Window"] }
regex = "1.10"

[workspace]
members = ["src-tauri"]
